// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AptoInput can error 1`] = `
<DocumentFragment>
  <div
    class="ui error input"
  >
    <input
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`AptoInput matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="ui input"
  >
    <input
      type="text"
    />
  </div>
</DocumentFragment>
`;
